Update test template and add Banner snapshot

--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -3,7 +3,7 @@ import { render, screen } from 'utils/test-utils';
 import {{pascalCase name}} from '.';
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render ...', () => {
+  it('should render correctly', () => {
     const { container } = render(<{{pascalCase name}} />);
 
     expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument();
